# ioproxy

./: .clang-format  .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md  TODO.txt  ioproxy.service  run-cmake.bat  run-release-build-and-install.bat  testrun.bat
.devcontainer/: Dockerfile  devcontainer.json
cmake/: Compiler.cmake  HumbleLogging.thirdparty.cmake  LibMUL.thirdparty.cmake
legacy/: App.hpp  Factory.cpp  Factory.hpp  IOHandler.cpp  WebSocketClientIO.cpp  serialportreader.bat  testrun.bat
legacy/ioproxy-gui/: App.hpp  App.js  Blueprint.hpp  BlueprintBackground.qml  BlueprintItem.cpp  BlueprintItem.hpp  BlueprintView.qml  Constants.qml  Main.cpp  Main.qml
legacy/ioproxy-gui-widgets/: CMakeLists.txt
legacy/ioproxy-gui-widgets/Widgets/: IOProxyMainWindow.cpp
legacy/ioproxy-serialports/: CMakeLists.txt
legacy/ioproxy-serialports/src/: Main.cpp
legacy/license/: License.cpp
legacy/tcpsocket-data-gen/: CMakeLists.txt
legacy/udpsocket-data-gen/: CMakeLists.txt
src/echo-plugin/: CMakeLists.txt  EchoIO.cpp  EchoIO.hpp  EchoPlugin.cpp  EchoPlugin.hpp
src/example-plugin/: CMakeLists.txt  ExamplePlugin.cpp  ExamplePlugin.hpp
src/ioproxy/: App.hpp  AppContext.hpp  CMakeLists.txt  CommandLineInitializer.hpp  CommandLineOutputter.hpp  Config.hpp  Engine.cpp  Engine.hpp  FileWriterIO.hpp  Global.hpp  Handler.cpp  Handler.hpp  HumanReadableFormatter.cpp  HumanReadableFormatter.hpp  IOBase.hpp  IOFactory.hpp  IOHandler.hpp  README.txt  SerialPortIO.hpp  StdOutIO.hpp  TcpServerIO.hpp  TcpSocketIO.hpp  TextIO.hpp  UdpSocketIO.hpp  Util.cpp  Version.hpp  ioproxy.sln  ioproxy.vcxproj  ioproxy.vcxproj.filters  main.cpp  serialportreader.bat  serialports.bat  testrun.bat  udp_multicast.bat
src/ioproxy-cli/: CMakeLists.txt
src/ioproxy-cli/src/: CmdLineConfig.cpp  CmdLineConfig.hpp  Config.cpp  Config.hpp  ConsoleStatusPrinter.cpp  ConsoleStatusPrinter.hpp  IOProxyConsoleApplication.cpp  IOProxyConsoleApplication.hpp  Main.cpp
src/ioproxy-gui/: App.cpp  Blueprint.cpp  BlueprintItem.qml  BlueprintTcpSocket.qml  BlueprintView.qml  CMakeLists.txt
src/ioproxy-gui-widgets/: Main.cpp
src/ioproxy-gui-widgets/Widgets/: IOProxyMainWindow.hpp  IOProxyMainWindow.ui
src/ioproxy-gui/src/: DataSourceWidget.cpp  DataSourceWidget.hpp  DataSourceWidget.ui  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
src/ioproxy-serialports/: CMakeLists.txt
src/ioproxy/include/ioproxy/: AppContext.hpp  CommandLineInitializer.hpp  Config.hpp  Engine.hpp  Handler.hpp  IOBase.hpp  IOHandler.hpp  Logging.hpp  PluginAPI.hpp  Version.hpp  Version.hpp.in
src/ioproxy/include/ioproxy/io/: CompressionIO.hpp  FileWriterIO.hpp  SerialPortIO.hpp  StdOutIO.hpp  TcpServerIO.hpp  TcpSocketIO.hpp  TextIO.hpp  UdpSocketIO.hpp
src/ioproxy/include/ioproxy/license/: License.hpp
src/ioproxy/io/: CompressionIO.cpp  CompressionIO.hpp  DataGeneratorIO.cpp  DataGeneratorIO.hpp  FileReaderIO.cpp  FileReaderIO.hpp  FileWriterIO.cpp  FileWriterIO.hpp  IOBase.hpp  IOFactoryBase.cpp  IOFactoryBase.hpp  SerialPortIO.cpp  SerialPortIO.hpp  StdOutIO.cpp  StdOutIO.hpp  TcpServerIO.cpp  TcpServerIO.hpp  TcpSocketIO.cpp  TcpSocketIO.hpp  TextIO.hpp  UdpSocketIO.cpp  UdpSocketIO.hpp  WebSocketClientIO.cpp  WebSocketClientIO.hpp  WebSocketHandler.hpp  WebSocketIO.cpp  WebSocketIO.hpp  WebSocketServerIO.cpp  WebSocketServerIO.hpp
src/ioproxy/io/ByteGenerator/: ByteGeneratorFactory.cpp  ByteGeneratorFactory.hpp  ByteGeneratorIO.cpp  ByteGeneratorIO.hpp
src/ioproxy/legacy/: DataGeneratorIO.cpp  WebSocketServerIO.hpp
src/ioproxy/os/: SignalHandler.hpp  SignalHandler.linux.cpp  SignalHandler.win32.cpp  Signals.cpp  Signals.hpp  WindowsSignalHandler.cpp  WindowsSignalHandler.hpp
src/ioproxy/src/: Config.cpp  Engine.cpp  Factory.cpp  Handler.cpp  Logging.cpp
src/ioproxy/src/io/: CompressionIO.cpp  SerialPortIO.cpp  TcpSocketIO.cpp  UdpSocketIO.cpp
src/ioproxy/src/os/: SignalHandler.win32.cpp
src/ioproxy/util/: HumanReadableFormatter.cpp  Util.cpp  Util.hpp
src/tcpsocket-data-gen/: CMakeLists.txt
src/tcpsocket-data-gen/src/: main.cpp
src/udpsocket-data-gen/src/: main.cpp
test/: TestConfig.xml  win32-file-read-write-test.bat  win32-tcp-test.bat
test/config-file-test/: config.ini
